--- a/web/config-export/system.site.yml
+++ b/web/config-export/system.site.yml
@@ -7,7 +7,7 @@ mail: bestyrelsen@hcandersensamfundet-odense.dk
 slogan: Odense
 page:
   403: ''
-  404: ''
+  404: /node/3
   front: /node
 admin_compact_mode: false
 weight_select_max: 100
