--- a/web/config-export/core.entity_view_display.node.article.default.yml
+++ b/web/config-export/core.entity_view_display.node.article.default.yml
@@ -11,7 +11,7 @@ dependencies:
     - node.type.article
   module:
     - datetime
-    - entity_reference_revisions
+    - layout_paragraphs
     - user
 _core:
   default_config_hash: br6izr-iGEu--JvNbCJNtOBpRnxpFLXfoV5y61U9Nqc
@@ -21,7 +21,7 @@ bundle: article
 mode: default
 content:
   field_paragraphs:
-    type: entity_reference_revisions_entity_view
+    type: layout_paragraphs
     label: hidden
     settings:
       view_mode: default
