feat: add anderseniana content type

--- a/web/config-export/user.role.content_editor.yml
+++ b/web/config-export/user.role.content_editor.yml
@@ -37,11 +37,14 @@ permissions:
   - 'delete own files'
   - 'delete own page content'
   - 'delete page revisions'
+  - 'edit any article content'
   - 'edit own article content'
   - 'edit own comments'
   - 'edit own page content'
   - 'edit terms in tags'
   - 'revert all revisions'
+  - 'revert article revisions'
   - 'view all revisions'
+  - 'view article revisions'
   - 'view own unpublished content'
   - 'view the administration theme'
