--- a/web/config-export/core.extension.yml
+++ b/web/config-export/core.extension.yml
@@ -18,12 +18,14 @@ module:
   editor: 0
   entity_reference_revisions: 0
   field: 0
+  field_group: 0
   field_ui: 0
   file: 0
   filter: 0
   help: 0
   history: 0
   image: 0
+  jquery_ui: 0
   language: 0
   layout_discovery: 0
   layout_paragraphs: 0
@@ -31,6 +33,7 @@ module:
   locale: 0
   media: 0
   media_library: 0
+  media_library_form_element: 0
   menu_link_content: 0
   menu_ui: 0
   mysql: 0
