feat: lots of front end changes, and editor role permissions modified
* New view mode: first and larger teaser, including twig and css
* Front page teaser view made display first teaser in the new view mode
* Base theme color adjusted
* Besome a member removed from primary menu, added to a custom block

--- a/web/config-export/system.site.yml
+++ b/web/config-export/system.site.yml
@@ -6,7 +6,7 @@ name: 'H.C. Andersen Samfundet'
 mail: bestyrelsen@hcandersensamfundet-odense.dk
 slogan: Odense
 page:
-  403: ''
+  403: /user/login
   404: /node/3
   front: /node
 admin_compact_mode: false
