--- a/web/config-export/block.block.hcas_help.yml
+++ b/web/config-export/block.block.hcas_help.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   module:
     - help
+    - system
   theme:
     - hcas
 _core:
@@ -19,4 +20,8 @@ settings:
   label: Hjælp
   label_display: '0'
   provider: help
-visibility: {  }
+visibility:
+  request_path:
+    id: request_path
+    negate: true
+    pages: '<front>'
