--- a/web/config-export/block.block.hcas_page_title.yml
+++ b/web/config-export/block.block.hcas_page_title.yml
@@ -11,7 +11,7 @@ _core:
 id: hcas_page_title
 theme: hcas
 region: content_above
-weight: -8
+weight: -9
 provider: null
 plugin: page_title_block
 settings:
@@ -23,4 +23,4 @@ visibility:
   request_path:
     id: request_path
     negate: true
-    pages: '/taxonomy/term/*'
+    pages: "/taxonomy/term/*\r\n<front>"
