--- a/web/config-export/hcas.settings.yml
+++ b/web/config-export/hcas.settings.yml
@@ -12,4 +12,4 @@ favicon:
   mimetype: image/vnd.microsoft.icon
 mobile_menu_all_widths: 0
 site_branding_bg_color: default
-base_primary_color: '#cf7618'
+base_primary_color: '#e58f34'
