--- a/web/config-export/olivero.settings.yml
+++ b/web/config-export/olivero.settings.yml
@@ -17,4 +17,4 @@ third_party_settings:
     module_link: true
 mobile_menu_all_widths: 0
 site_branding_bg_color: default
-base_primary_color: '#cf7618'
+base_primary_color: '#e58f34'
