feat: configuration, paragraphs, templates, and styling for a node page frontpage

--- a/web/config-export/block.block.hcas_frontpage_heading.yml
+++ b/web/config-export/block.block.hcas_frontpage_heading.yml
@@ -1,6 +1,6 @@
 uuid: 976ea031-3915-4fd9-a2c1-267a2716c63e
 langcode: da
-status: true
+status: false
 dependencies:
   content:
     - 'block_content:blank_block:93a6c3a7-7afd-4a94-ae7b-e365c93dd600'
