--- a/web/config-export/block.block.hcas_sidefod.yml
+++ b/web/config-export/block.block.hcas_sidefod.yml
@@ -10,7 +10,7 @@ dependencies:
     - hcas
 id: hcas_sidefod
 theme: hcas
-region: footer_top
+region: footer_bottom
 weight: 0
 provider: null
 plugin: 'system_menu_block:footer'
