--- a/web/config-export/core.entity_view_display.node.page.default.yml
+++ b/web/config-export/core.entity_view_display.node.page.default.yml
@@ -20,7 +20,7 @@ content:
     type: entity_reference_revisions_entity_view
     label: hidden
     settings:
-      view_mode: default
+      view_mode: full
       link: ''
     third_party_settings: {  }
     weight: 2
@@ -34,6 +34,8 @@ content:
     weight: 1
     region: content
   links:
+    settings: {  }
+    third_party_settings: {  }
     weight: 101
     region: content
 hidden:
