--- a/web/config-export/core.entity_view_display.node.page.full.yml
+++ b/web/config-export/core.entity_view_display.node.page.full.yml
@@ -19,7 +19,7 @@ content:
     type: layout_paragraphs
     label: hidden
     settings:
-      view_mode: default
+      view_mode: full
       link: ''
     third_party_settings: {  }
     weight: 1
