--- a/web/config-export/core.entity_view_display.paragraph.button.default.yml
+++ b/web/config-export/core.entity_view_display.paragraph.button.default.yml
@@ -20,22 +20,6 @@ content:
     third_party_settings: {  }
     weight: 0
     region: content
-  field_primary:
-    type: boolean
-    label: hidden
-    settings:
-      format: true-false
-      format_custom_false: ''
-      format_custom_true: ''
-    third_party_settings: {  }
-    weight: 1
-    region: content
-  field_url:
-    type: string
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    weight: 2
-    region: content
-hidden: {  }
+hidden:
+  field_primary: true
+  field_url: true
