--- a/web/config-export/system.site.yml
+++ b/web/config-export/system.site.yml
@@ -8,7 +8,7 @@ slogan: Odense
 page:
   403: /user/login
   404: /node/3
-  front: /node
+  front: /node/23
 admin_compact_mode: false
 weight_select_max: 100
 default_langcode: da
