fix: misc config changes

--- a/web/config-export/block.block.hcas_andersenianalink.yml
+++ b/web/config-export/block.block.hcas_andersenianalink.yml
@@ -11,8 +11,8 @@ dependencies:
     - hcas
 id: hcas_andersenianalink
 theme: hcas
-region: content
-weight: -7
+region: content_above
+weight: -8
 provider: null
 plugin: 'block_content:c2bc5fc3-877a-4ac5-b718-d9302378f273'
 settings:
