--- a/web/config-export/core.entity_form_display.paragraph.button.default.yml
+++ b/web/config-export/core.entity_form_display.paragraph.button.default.yml
@@ -3,6 +3,8 @@ langcode: da
 status: true
 dependencies:
   config:
+    - field.field.paragraph.button.field_alignment
+    - field.field.paragraph.button.field_fullwidth
     - field.field.paragraph.button.field_label
     - field.field.paragraph.button.field_primary
     - field.field.paragraph.button.field_url
@@ -12,6 +14,19 @@ targetEntityType: paragraph
 bundle: button
 mode: default
 content:
+  field_alignment:
+    type: options_select
+    weight: 3
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  field_fullwidth:
+    type: boolean_checkbox
+    weight: 4
+    region: content
+    settings:
+      display_label: true
+    third_party_settings: {  }
   field_label:
     type: string_textfield
     weight: 1
