--- a/web/config-export/core.entity_view_display.paragraph.button.full.yml
+++ b/web/config-export/core.entity_view_display.paragraph.button.full.yml
@@ -4,15 +4,36 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.paragraph.full
+    - field.field.paragraph.button.field_alignment
+    - field.field.paragraph.button.field_fullwidth
     - field.field.paragraph.button.field_label
     - field.field.paragraph.button.field_primary
     - field.field.paragraph.button.field_url
     - paragraphs.paragraphs_type.button
+  module:
+    - options
 id: paragraph.button.full
 targetEntityType: paragraph
 bundle: button
 mode: full
 content:
+  field_alignment:
+    type: list_key
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
+    weight: 3
+    region: content
+  field_fullwidth:
+    type: boolean
+    label: hidden
+    settings:
+      format: true-false
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    weight: 4
+    region: content
   field_label:
     type: string
     label: hidden
