--- a/web/config-export/core.entity_form_display.paragraph.medie.default.yml
+++ b/web/config-export/core.entity_form_display.paragraph.medie.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.medie.field_media_reference
+    - field.field.paragraph.medie.field_node_reference
     - paragraphs.paragraphs_type.medie
   module:
     - media_library
@@ -18,6 +19,16 @@ content:
     region: content
     settings:
       media_types: {  }
+    third_party_settings: {  }
+  field_node_reference:
+    type: entity_reference_autocomplete
+    weight: 0
+    region: content
+    settings:
+      match_operator: CONTAINS
+      match_limit: 10
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
   layout_paragraphs_fields:
     weight: -200
