--- a/web/config-export/core.entity_form_display.paragraph.text.default.yml
+++ b/web/config-export/core.entity_form_display.paragraph.text.default.yml
@@ -3,6 +3,7 @@ langcode: da
 status: true
 dependencies:
   config:
+    - field.field.paragraph.text.field_node_reference
     - field.field.paragraph.text.field_text_block
     - paragraphs.paragraphs_type.text
   module:
@@ -12,6 +13,16 @@ targetEntityType: paragraph
 bundle: text
 mode: default
 content:
+  field_node_reference:
+    type: entity_reference_autocomplete
+    weight: 0
+    region: content
+    settings:
+      match_operator: CONTAINS
+      match_limit: 10
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
   field_text_block:
     type: text_textarea
     weight: -199
