--- a/web/config-export/core.entity_view_display.node.anderseniana.teaser.yml
+++ b/web/config-export/core.entity_view_display.node.anderseniana.teaser.yml
@@ -8,7 +8,7 @@ dependencies:
     - field.field.node.anderseniana.field_tags
     - field.field.node.anderseniana.field_teaser_image
     - field.field.node.anderseniana.field_teaser_text
-    - image.style.thumbnail
+    - image.style.medium
     - node.type.anderseniana
   module:
     - media
@@ -23,7 +23,7 @@ content:
     label: hidden
     settings:
       image_link: ''
-      image_style: thumbnail
+      image_style: medium
       image_loading:
         attribute: lazy
     third_party_settings: {  }
